--- a/剪纸堆/MainWindow.xaml
+++ b/剪纸堆/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="剪纸堆.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="剪纸堆.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:剪纸堆"
          xmlns:sys="clr-namespace:System;assembly=mscorlib"  
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="剪纸堆" 
         Height="300" Width="200" 
         ResizeMode="NoResize" 
         WindowStyle="None"
@@ -14,6 +14,9 @@ AllowsTransparency="True"
         Background="{x:Null}" 
          Topmost="True"
         Loaded="Window_Loaded"
+        MouseEnter="Window_MouseEnter"
+        MouseLeave="mainWindow_MouseLeave"
+        ShowInTaskbar="False"
         >
     <Window.Resources>
         <SolidColorBrush x:Key="headerColor" Color="#FFFFCC"/>
@@ -80,8 +83,7 @@ AllowsTransparency="True"
 
 
     </Window.Resources>
-
-    <StackPanel Name="spnl">
+    <StackPanel>
         <Grid MouseLeftButtonDown="Grid_MouseLeftButtonDown">
 
             <Border CornerRadius="3"  HorizontalAlignment="Center" VerticalAlignment="Center" BorderBrush="{DynamicResource headerColor}" BorderThickness="4">
@@ -96,13 +98,12 @@ AllowsTransparency="True"
                 <TextBlock Text="剪纸堆" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="6,2" FontFamily="Microsoft YaHei" />
 
             </Grid>
-           
-        </Grid>
-        <!--<StackPanel.Effect>
-            <DropShadowEffect Direction="-45" Opacity="0.996"/>
-        </StackPanel.Effect>-->
-        <TextBlock/>
-        <TextBlock/>
-    </StackPanel>
 
+        </Grid>
+        <TextBlock/>
+        <TextBlock/>
+        <StackPanel Name="spnl">
+
+    </StackPanel>
+    </StackPanel>
 </Window>
