--- a/剪纸堆/App.xaml
+++ b/剪纸堆/App.xaml
@@ -1,8 +1,7 @@
-﻿<Application x:Class="剪纸堆.App"
+﻿<Application x:Class="FloatClipboard.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:剪纸堆"
-             >
+             xmlns:local="clr-namespace:FloatClipboard">
     <Application.Resources>
          
     </Application.Resources>
