--- a/剪纸堆/MainWindow.xaml
+++ b/剪纸堆/MainWindow.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Name="mainWindow" x:Class="剪纸堆.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="FloatClipboard.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:剪纸堆"
+        xmlns:local="clr-namespace:FloatClipboard"
          xmlns:sys="clr-namespace:System;assembly=mscorlib"  
         mc:Ignorable="d"
         Title="剪纸堆" 
-        Height="300" Width="200" 
+        Width="200" 
         ResizeMode="NoResize" 
         WindowStyle="None"
-AllowsTransparency="True"
+        AllowsTransparency="True"
         Background="{x:Null}" 
-         Topmost="True"
+        Topmost="True"
         Loaded="WinMainLoadedEventHandler"
         MouseEnter="WinMainMouseEnterEventHandler"
         MouseLeave="WinMainMouseLeaveEventHandler"
@@ -21,6 +21,65 @@ AllowsTransparency="True"
     <Window.Resources>
         <SolidColorBrush x:Key="headerColor" Color="#FFFFCC"/>
         <SolidColorBrush x:Key="universalBrush" Color="#FFCCCCFF"/>
+
+
+        <Style TargetType="{x:Type ContextMenu}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ContextMenu}">
+                        <Border x:Name="Border" Background="#DDDDDD"  BorderThickness="0">
+                            <ItemsPresenter/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="{x:Type MenuItem}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type MenuItem}">
+                        <Border Margin="1" MinWidth="80" >
+                            <Border.Background>
+                                <SolidColorBrush x:Name="MyAnimatedBrushBackground" Color="Transparent" />
+                            </Border.Background>
+                            <StackPanel Orientation="Horizontal" Margin="8">
+                                <ContentPresenter ContentSource="Header" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="IsMouseOver" Value="True"/>
+                                </MultiTrigger.Conditions>
+                                <MultiTrigger.EnterActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="MyAnimatedBrushBackground" Storyboard.TargetProperty="Color">
+                                                <LinearColorKeyFrame Value="Transparent" KeyTime="00:00:00.0020000" />
+                                                <LinearColorKeyFrame Value="#7E9C9C9C" KeyTime="00:00:00.0220000" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </MultiTrigger.EnterActions>
+                                <MultiTrigger.ExitActions>
+                                    <BeginStoryboard>
+                                        <Storyboard>
+                                            <ColorAnimationUsingKeyFrames BeginTime="00:00:00" Storyboard.TargetName="MyAnimatedBrushBackground" Storyboard.TargetProperty="Color">
+                                                <LinearColorKeyFrame Value="#7E9C9C9C" KeyTime="00:00:00.0020000" />
+                                                <LinearColorKeyFrame Value="Transparent" KeyTime="00:00:00.0220000" />
+                                            </ColorAnimationUsingKeyFrames>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </MultiTrigger.ExitActions>
+                            </MultiTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
+
         <Style TargetType="Button" x:Key="buttonStyle">
             <Setter Property="Background" Value="{DynamicResource universalBrush}"/>
             <Setter Property="FontSize" Value="14"/>
@@ -59,6 +118,64 @@ AllowsTransparency="True"
             </Setter>
         </Style>
 
+
+
+        <ControlTemplate x:Key="scroll_background" TargetType="RepeatButton">
+            <Border Background="Transparent"/>
+        </ControlTemplate>
+        <Style x:Key="scroll_thumb_style" TargetType="Thumb">
+            <Setter Property="SnapsToDevicePixels" Value="True"/>
+            <Setter Property="OverridesDefaultStyle" Value="true"/>
+            <Setter Property="IsTabStop" Value="false"/>
+            <Setter Property="Focusable" Value="false"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Thumb">
+                        <Rectangle x:Name="rect" Width="12" Fill="#C0C0C0" RadiusX="6" RadiusY="6"/>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter TargetName="rect" Property="Fill" Value="#AAAAAA"/>
+                            </Trigger>
+                            <Trigger Property="IsDragging" Value="true">
+                                <Setter TargetName="rect" Property="Fill" Value="#999999"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style  TargetType="ScrollBar">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ScrollBar">
+                        <Grid Width="12">
+                            <Border x:Name="bd" Width="12" HorizontalAlignment="Center" CornerRadius="6" Background="{DynamicResource backgroundBrushColor}">
+                            </Border>
+                            <Track HorizontalAlignment="Center" Name="PART_Track" Width="{TemplateBinding Width}" Maximum="{TemplateBinding Maximum}" Minimum="{TemplateBinding Minimum}"  
+                                    Value="{TemplateBinding Value}"  IsDirectionReversed="true">
+                                <Track.DecreaseRepeatButton>
+                                    <RepeatButton Template="{StaticResource scroll_background}" Command="ScrollBar.LineUpCommand"  />
+                                </Track.DecreaseRepeatButton>
+                                <Track.IncreaseRepeatButton>
+                                    <RepeatButton Template="{StaticResource scroll_background}" Command="ScrollBar.LineDownCommand" />
+                                </Track.IncreaseRepeatButton>
+                                <Track.Thumb>
+                                    <Thumb Style="{StaticResource scroll_thumb_style}" />
+                                </Track.Thumb>
+                            </Track>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter TargetName="bd" Property="Background" Value="#DDDDDD"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+
+
         <Style TargetType="Button" x:Key="tempButtonStyle">
             <Setter Property="Background" Value="{DynamicResource universalBrush}"/>
             <Setter Property="FontSize" Value="14"/>
@@ -87,38 +204,36 @@ AllowsTransparency="True"
                 </Grid.RowDefinitions>
                 <!--<Rectangle x:Name="Corner" Grid.Column="0" Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.Row="1"/>-->
                 <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Grid.Column="0" Margin="{TemplateBinding Padding}" Grid.Row="0"/>
-                <ScrollBar Opacity="{DynamicResource Opacity}" x:Name="PART_VerticalScrollBar" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}"/>
-                <ScrollBar x:Name="PART_HorizontalScrollBar" AutomationProperties.AutomationId="HorizontalScrollBar" Cursor="Arrow" Grid.Column="0" Maximum="{TemplateBinding ScrollableWidth}" Minimum="0" Orientation="Horizontal" Grid.Row="1" Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportWidth}"/>
+                <ScrollBar Opacity="0" x:Name="PART_VerticalScrollBar" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}"/>
             </Grid>
         </ControlTemplate>
-        <sys:Double x:Key="Opacity" >0</sys:Double>
+
 
 
 
     </Window.Resources>
     <ScrollViewer x:Name="sv" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Grid.Row="2" Template="{DynamicResource ScrollViewerControlTemplate1}">
-        <ScrollViewer.Content>
-            <Grid >
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="24"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
 
-                <Grid MouseLeftButtonDown="HeadingGridMouseLeftButtonDownEventHandler" VerticalAlignment="Top" Margin="0,0,8,0">
-                    <Border CornerRadius="3"  HorizontalAlignment="Center" VerticalAlignment="Center" BorderBrush="{DynamicResource headerColor}" BorderThickness="4">
-                        <Border.Effect>
-                            <DropShadowEffect RenderingBias="Quality" Color="#CC555500" Opacity="0.5"/>
-                        </Border.Effect>
-                        <TextBlock Name="header" Text="剪纸堆" Foreground="Transparent" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,1"/>
-                    </Border>
-                    <Grid Background="{DynamicResource headerColor}" HorizontalAlignment="Center" VerticalAlignment="Center" >
-                        <TextBlock Text="剪纸堆" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="6,2" FontFamily="Microsoft YaHei"  PreviewMouseRightButtonUp="TxtHeadingPreviewMouseRightButtonUpEventHandler"/>
-                    </Grid>
+        <Grid >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="24"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid MouseLeftButtonDown="HeadingGridMouseLeftButtonDownEventHandler" VerticalAlignment="Top" Margin="0,0,8,0">
+                <Border CornerRadius="3"  HorizontalAlignment="Center" VerticalAlignment="Center" BorderBrush="{DynamicResource headerColor}" BorderThickness="4">
+                    <Border.Effect>
+                        <DropShadowEffect RenderingBias="Quality" Color="#CC555500" Opacity="0.5"/>
+                    </Border.Effect>
+                    <TextBlock Name="header" Text="剪纸堆" Foreground="Transparent" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5,1"/>
+                </Border>
+                <Grid Background="{DynamicResource headerColor}" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                    <TextBlock Text="剪纸堆" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="6,2" FontFamily="Microsoft YaHei"  PreviewMouseRightButtonUp="TxtHeadingPreviewMouseRightButtonUpEventHandler"/>
                 </Grid>
-                <StackPanel Name="spnl" Orientation="Vertical" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.Row="2" Margin="0,0,8,0"/>
             </Grid>
-        </ScrollViewer.Content>
+            <StackPanel Name="stk" Orientation="Vertical" ScrollViewer.VerticalScrollBarVisibility="Auto" Grid.Row="2" Margin="0,0,8,0"/>
+        </Grid>
+
 
     </ScrollViewer>
 
